MODDCB-228: Fix checkstyle issues